--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">CO TO JEST PSYCHOTERAPIA?</h2>
+										<p>PSYCHOTERAPIA jest metodą leczenia zaburzeń nerwicowych, lęków, depresji, zaburzeń jedzenia i niektórych zaburzeń osobowości oraz metodą poprawiającą funkcjonowanie w relacjach z innymi osobami, pozwalającą lepiej zrozumieć siebie i innych, podnieść swoją samoocenę, bardziej asertywnie bronić swoich praw, czuć większą pewność siebie.</p>
 									</div>
 								</div>
 							</section>
@@ -71,9 +70,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">PSYCHOTERAPIA INDYWIDUALNA</h2>
+										<p>PSYCHOTERAPIA INDYWIDUALNA polega na indywidualnych rozmowach z terapeutą w ustalonej wspólnie częstotliwości, podczas których pacjent uczy się rozpoznawać i nazywać swoje uczucia, bada swoje potrzeby i sposoby ich realizacji. Wspólnie z terapeutą szuka swoich zasobów i wewnętrznych możliwości, do których nie ma dostępu i uczy się ich w nowy, satysfakcjonujący sposób używać i realizować swoje cele.</p>
 									</div>
 								</div>
 							</section>
@@ -83,9 +81,8 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
+										<h2 class="major">PSYCHOTERAPIA GRUPOWA</h2>
+										<p>PSYCHOTERAPIA GRUPOWA polega na bezpiecznym ale intensywnym doświadczaniu siebie w kontakcie z innymi ludźmi. Umożliwia przyjrzenie się swoim wewnętrznym przeżyciom ale i przeżyciom innych ludzi. W warunkach pozbawionych oceny i doradzania jest lustrem w którym można dostrzec to, co na co dzień pozostaje dla nas ukryte. Proponowane w trakcie terapii grupowej techniki (dialog, psychodrama,zadania domowe, praca ze snem, voice dialog) pozwalają na takie poszerzenie swojej świadomości lub zmianę zachowania, dzięki  której ustępują objawy chorobowe i znacząco poprawia się jakość życia.</p>
 									</div>
 								</div>
 							</section>
@@ -132,8 +129,8 @@
 				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+							<h2 class="major">Gabinet</h2>
+							
 							<form method="post" action="#">
 								<div class="field">
 									<label for="name">Name</label>
@@ -153,20 +150,32 @@
 							</form>
 							<ul class="contact">
 								<li class="fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
+									PRACOWNIA PSYCHOTERAPII <br />
+									40-­043 Katowice <br />
+									ul.Jordana 6/10 <br />
 								</li>
-								<li class="fa-phone">(000) 000-0000</li>
+								<li class="fa-phone">+48 501 401 576</li>
 								<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="fa-facebook"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
+
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Magdalena Klasik. All rights reserved.</li>
 							</ul>
 						</div>
+						
+						<p>
+							Jeżeli:
+							<ul>
+								<li>chcesz z kimś porozmawiać</li>
+								<li>czujesz niepokojące objawy w ciele­ bóle brzucha, nudności, przyspieszone bicie serca, bóle lub zawroty głowy, drżenia i napięcie mięśniowe w różnych częściach ciała, kłopoty ze snem, nieokreślony niepokój,a wyniki badań są prawidłowe,</li>
+								<li>czujesz smutek, przygnębienie, niechęć do pracy i innych form aktywności życiowych,</li>
+								<li>czujesz, że życie traci sens,</li>
+								<li>nie umiesz rozmawiać z najbliższymi,</li>
+								<li>zajadasz, przesypiasz lub w inny sposób zagłuszasz swój lęk i inne uczucia,</li>
+								<li>chcesz zmienić coś w swoim życiu, doświadczać więcej radości i satysfakcji, czuć więcej wolności, byc bardziej sobą, a nie wiesz jak to zrobić...</li>
+							</ul>
+						</p>
+						<p>umów się na rozmowę z psychoterapeutą.</p>
 					</section>
 
 			</div>
