--- a/index.html
+++ b/index.html
@@ -178,11 +178,18 @@
 									ul. Jordana 6/10 <br />
 								</li>
 								<li class="fa-phone">+48 501 401 576</li>
-								<li class="fa-envelope"><a href="#">information@untitled.tld</a></li>
+								<li class="fa-envelope">
+									<script type="text/javascript">
+										emailE='gmail.com'
+										emailE=('magdalena.klasik' + '@' + emailE)
+										document.write('<A href="mailto:' + emailE + '">' + emailE + '</a>')
+									</script>
+								</li>
 							</ul>
 
 							<ul class="copyright">
 								<li>&copy; Magdalena Klasik. All rights reserved.</li>
+								<a href="http://nie-spamuj.eu/email.php"></a>
 							</ul>
 						</div>
 						
