--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="#banner">Magdalena Klasik</a></li>
+								<li><a href="#one">Co to jest psychoterapia?</a></li>
+								<li><a href="#two">Psychoterapia Indywidualna</a></li>
+								<li><a href="#three">Psychoterapia Grupowa</a></li>
+								<li><a href="#four">O mnie</a></li>
+								<li><a href="#footer">Gabinet</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -60,7 +61,7 @@
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">CO TO JEST PSYCHOTERAPIA?</h2>
-										<p>PSYCHOTERAPIA jest metodą leczenia zaburzeń nerwicowych, lęków, depresji, zaburzeń jedzenia i niektórych zaburzeń osobowości oraz metodą poprawiającą funkcjonowanie w relacjach z innymi osobami, pozwalającą lepiej zrozumieć siebie i innych, podnieść swoją samoocenę, bardziej asertywnie bronić swoich praw, czuć większą pewność siebie.</p>
+										<p>Psychoterapia jest metodą leczenia zaburzeń nerwicowych, lęków, depresji, zaburzeń jedzenia i niektórych zaburzeń osobowości oraz metodą poprawiającą funkcjonowanie w relacjach z innymi osobami, pozwalającą lepiej zrozumieć siebie i innych, podnieść swoją samoocenę, bardziej asertywnie bronić swoich praw, czuć większą pewność siebie.</p>
 									</div>
 								</div>
 							</section>
@@ -71,7 +72,7 @@
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">PSYCHOTERAPIA INDYWIDUALNA</h2>
-										<p>PSYCHOTERAPIA INDYWIDUALNA polega na indywidualnych rozmowach z terapeutą w ustalonej wspólnie częstotliwości, podczas których pacjent uczy się rozpoznawać i nazywać swoje uczucia, bada swoje potrzeby i sposoby ich realizacji. Wspólnie z terapeutą szuka swoich zasobów i wewnętrznych możliwości, do których nie ma dostępu i uczy się ich w nowy, satysfakcjonujący sposób używać i realizować swoje cele.</p>
+										<p>Psychoterapia indywidualna polega na indywidualnych rozmowach z terapeutą w ustalonej wspólnie częstotliwości, podczas których pacjent uczy się rozpoznawać i nazywać swoje uczucia, bada swoje potrzeby i sposoby ich realizacji. Wspólnie z terapeutą szuka swoich zasobów i wewnętrznych możliwości, do których nie ma dostępu i uczy się ich w nowy, satysfakcjonujący sposób używać i realizować swoje cele.</p>
 									</div>
 								</div>
 							</section>
@@ -82,7 +83,7 @@
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">PSYCHOTERAPIA GRUPOWA</h2>
-										<p>PSYCHOTERAPIA GRUPOWA polega na bezpiecznym ale intensywnym doświadczaniu siebie w kontakcie z innymi ludźmi. Umożliwia przyjrzenie się swoim wewnętrznym przeżyciom ale i przeżyciom innych ludzi. W warunkach pozbawionych oceny i doradzania jest lustrem w którym można dostrzec to, co na co dzień pozostaje dla nas ukryte. Proponowane w trakcie terapii grupowej techniki (dialog, psychodrama,zadania domowe, praca ze snem, voice dialog) pozwalają na takie poszerzenie swojej świadomości lub zmianę zachowania, dzięki  której ustępują objawy chorobowe i znacząco poprawia się jakość życia.</p>
+										<p>Psychoterapia grupowa polega na bezpiecznym ale intensywnym doświadczaniu siebie w kontakcie z innymi ludźmi. Umożliwia przyjrzenie się swoim wewnętrznym przeżyciom ale i przeżyciom innych ludzi. W warunkach pozbawionych oceny i doradzania jest lustrem w którym można dostrzec to, co na co dzień pozostaje dla nas ukryte. Proponowane w trakcie terapii grupowej techniki (dialog, psychodrama,zadania domowe, praca ze snem, voice dialog) pozwalają na takie poszerzenie swojej świadomości lub zmianę zachowania, dzięki  której ustępują objawy chorobowe i znacząco poprawia się jakość życia.</p>
 									</div>
 								</div>
 							</section>
@@ -105,6 +106,19 @@
 											</p>
 										</article>
 										<article>
+											<h3 class="major">WYKSZTAŁCENIE PSYCHOTERAPEUTYCZNE:</h3>
+											<p>
+												<ul>
+													<li>kierunek psychologia kliniczna na Wydziale Pedagogiki i Psychologii Uniwersytetu Śląskiego w Katowicach,</li>
+													<li>półroczny staż w Oddziale Nerwic Kliniki Psychiatrii Akademii Medycznej w Krakowie,</li>
+													<li>6-letni staż w Laboratorium Psychoedukacji w Warszawie,</li>
+													<li>całościowy kurs Terapii Ericksonowskiej w Instytucie Ericksonowskim w Łodzi,</li>
+													<li>4-letni kurs do certyfikatu w Krakowie zakończony uzyskaniem certyfikatu psychoterapeuty.</li>
+													<li>liczne warsztaty terapeutyczne Wolfa Buntiga, Gerharda Fassera, Stephana Schoena i innych...</li>
+												</ul>
+											</p>
+										</article>
+										<article>
 											<h3 class="major">Jeżeli:</h3>
 											<p>
 												<ul>
@@ -120,19 +134,6 @@
 											<p>umów się na rozmowę z psychoterapeutą.</p>
 										</article>
 										<article>
-											<h3 class="major">WYKSZTAŁCENIE PSYCHOTERAPEUTYCZNE:</h3>
-											<p>
-												<ul>
-													<li>kierunek psychologia kliniczna na Wydziale Pedagogiki i Psychologii Uniwersytetu Śląskiego w Katowicach,</li>
-													<li>półroczny staż w Oddziale Nerwic Kliniki Psychiatrii Akademii Medycznej w Krakowie,</li>
-													<li>6-letni staż w Laboratorium Psychoedukacji w Warszawie,</li>
-													<li>całościowy kurs Terapii Ericksonowskiej w Instytucie Ericksonowskim w Łodzi,</li>
-													<li>4-letni kurs do certyfikatu w Krakowie zakończony uzyskaniem certyfikatu psychoterapeuty.</li>
-													<li>liczne warsztaty terapeutyczne Wolfa Buntiga, Gerharda Fassera, Stephana Schoena i innych...</li>
-												</ul>
-											</p>
-										</article>
-										<article>
 											<h3 class="major">OFERTA:</h3>
 											<p>Prowadzę psychoterapię, warsztaty i tereningi oparte na własnym stylu czerpiąc m.in. z podejścia ericksonowskiego, bioenergetyki, Gestaltu, Voice Dialog, oraz psychodynamicznego rozumienia pacjenta. </p>
 											<p>
@@ -142,8 +143,8 @@
 	
 													<li>psychoterapia grupowa:
 														<ul>
-															<li>w grupach ambulatoryjnych, 1spotkanie w tygodniu 3 godz.</li>
-															<li>w grupie weekendowej, 1 raz w miesiącu 1,5 dnia</li>
+															<li>w grupach ambulatoryjnych:<br />1 spotkanie w tygodniu 3 godz.</li>
+															<li>w grupie weekendowej:<br />1 raz w miesiącu 1,5 dnia</li>
 														</ul>
 													</li>
 													<li>treningi i warsztaty łączące:
