Pierwsze próbne obrazki

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 									<h2 class="major">O MNIE:</h2>
 									<section class="features">
 										<article>
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">MAGDALENA KLASIK </h3>
 											<p>
 												<ul>
@@ -106,6 +107,7 @@
 											</p>
 										</article>
 										<article>
+											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">WYKSZTAŁCENIE PSYCHOTERAPEUTYCZNE:</h3>
 											<p>
 												<ul>
@@ -119,6 +121,7 @@
 											</p>
 										</article>
 										<article>
+											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3 class="major">Jeżeli:</h3>
 											<p>
 												<ul>
@@ -134,6 +137,7 @@
 											<p>umów się na rozmowę z psychoterapeutą.</p>
 										</article>
 										<article>
+											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
 											<h3 class="major">OFERTA:</h3>
 											<p>Prowadzę psychoterapię, warsztaty i tereningi oparte na własnym stylu czerpiąc m.in. z podejścia ericksonowskiego, bioenergetyki, Gestaltu, Voice Dialog, oraz psychodynamicznego rozumienia pacjenta. </p>
 											<p>
