--- a/index.html
+++ b/index.html
@@ -212,6 +212,6 @@
 			<script src="assets/js/main.js"></script>
 			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvIo6iBmnAE1zM8HDhwLgFuyKAvu8w_Xo&sensor=false"></script>
 			<script src="assets/js/googleMapConfiguration.js"></script>
-
+			<script src="assets/js/googleAnalytics.js"></script>
 	</body>
 </html>
