--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-user"></span></div>
+							<div class="logo">
+								<a href="#" class="image"><img src="images/portret.jpg" alt="portret" /></a>
+							</div>
 							<h2>mgr. Magdalena Klasik</h2>
 							<p>psycholog, psychoterapeuta</p>
 						</div>
