SEO index and css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 -->
 <html>
 	<head>
-		<title>Magdalena Klasik, psycholog, psychoterapeuta.</title>
+		<title>Psychoterapeuta Katowice - Magdalena Klasik - psycholog, psychoterapeuta.</title>
+        <meta name="keywords" content="psychoterapeuta, psycholog, psychoterapeuta katowice, psycholog katowice, psychoterapeuta w katowicach, psycholog w katowicach, Magdalena Klasik" />
+  		<meta name="description" content="Psychoterapeuta Katowice Magdalena Klasik -Jestem psychologiem klinicznym, z I stopniem specjalizacji, certyfikowanym psychoterapeutą SNP PTP." />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -14,6 +16,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<script src="assets/js/googleAnalytics.js"></script>
+        <meta name="google-site-verification" content="UIiPBmQboFwEaPrXdtPJnfoLeD7LiNATxOXzX4Aqyj0" />
 	</head>
 	<body>
 
@@ -22,7 +25,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Magdalena Klasik</a></h1>
+						<h1><a href="/">Magdalena Klasik - Psychoterapeuta w Katowicach</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -48,10 +51,10 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo">
-								<a href="#" class="image"><img src="images/portret.jpg" alt="portret" /></a>
+								<a href="#" class="image"><img src="images/portret.jpg" alt="Psychoterapeuta Katowice Magdalena Klasik" />Psychoterapeuta Katowice Magdalena Klasik</a>
 							</div>
 							<h2>mgr. Magdalena Klasik</h2>
-							<p>psycholog, psychoterapeuta</p>
+							<p>psycholog, psychoterapeuta - Katowice</p>
 						</div>
 					</section>
 
@@ -61,7 +64,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic01.jpg" alt="Psychoterapeuta" /></a>
 									<div class="content">
 										<h2 class="major">CO TO JEST PSYCHOTERAPIA?</h2>
 										<p>Psychoterapia jest metodą leczenia zaburzeń nerwicowych, lęków, depresji, zaburzeń jedzenia i niektórych zaburzeń osobowości oraz metodą poprawiającą funkcjonowanie w relacjach z innymi osobami, pozwalającą lepiej zrozumieć siebie i innych, podnieść swoją samoocenę, bardziej asertywnie bronić swoich praw, czuć większą pewność siebie.</p>
@@ -72,7 +75,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic02.jpg" alt="Psycholog" /></a>
 									<div class="content">
 										<h2 class="major">PSYCHOTERAPIA INDYWIDUALNA</h2>
 										<p>Psychoterapia indywidualna polega na indywidualnych rozmowach z terapeutą w ustalonej wspólnie częstotliwości, podczas których pacjent uczy się rozpoznawać i nazywać swoje uczucia, bada swoje potrzeby i sposoby ich realizacji. Wspólnie z terapeutą szuka swoich zasobów i wewnętrznych możliwości, do których nie ma dostępu i uczy się ich w nowy, satysfakcjonujący sposób używać i realizować swoje cele.</p>
@@ -83,7 +86,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/pic03.jpg" alt="Psychoterapia" /></a>
 									<div class="content">
 										<h2 class="major">PSYCHOTERAPIA GRUPOWA</h2>
 										<p>Psychoterapia grupowa polega na bezpiecznym ale intensywnym doświadczaniu siebie w kontakcie z innymi ludźmi. Umożliwia przyjrzenie się swoim wewnętrznym przeżyciom ale i przeżyciom innych ludzi. W warunkach pozbawionych oceny i doradzania jest lustrem w którym można dostrzec to, co na co dzień pozostaje dla nas ukryte. Proponowane w trakcie terapii grupowej techniki (dialog, psychodrama,zadania domowe, praca ze snem, voice dialog) pozwalają na takie poszerzenie swojej świadomości lub zmianę zachowania, dzięki  której ustępują objawy chorobowe i znacząco poprawia się jakość życia.</p>
@@ -97,7 +100,7 @@
 									<h2 class="major">O MNIE:</h2>
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="Magdalena Klasik" /></a>
 											<h3 class="major">MAGDALENA KLASIK </h3>
 											<p>
 												<ul>
@@ -110,7 +113,7 @@
 											</p>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic05.jpg" alt="Psychoterapeuta Magdalena Klasik" /></a>
 											<h3 class="major">WYKSZTAŁCENIE PSYCHOTERAPEUTYCZNE:</h3>
 											<p>
 												<ul>
@@ -196,7 +199,7 @@
 							<div id="map"></div>
 
 							<ul class="copyright">
-								<li>&copy; Magdalena Klasik. All rights reserved.</li>
+								<li>&copy; Magdalena Klasik - Psychoterapeuta Katowice. All rights reserved.</li>
 								<a href="http://nie-spamuj.eu/email.php"></a>
 							</ul>
 						</div>
