--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 					<section id="banner">
 						<div class="inner">
 							<div class="logo">
-								<a href="#" class="image"><img src="images/portret.jpg" alt="Psychoterapeuta Katowice Magdalena Klasik" />Psychoterapeuta Katowice Magdalena Klasik</a>
+								<a href="#" class="image"><img src="images/portret.jpg" alt="Psychoterapeuta Katowice Magdalena Klasik" /></a>
 							</div>
-							<h2>mgr. Magdalena Klasik</h2>
+							<h2>mgr Magdalena Klasik</h2>
 							<p>psycholog, psychoterapeuta - Katowice</p>
 						</div>
 					</section>
