--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Psychoterapeuta Katowice - Magdalena Klasik - psycholog, psychoterapeuta.</title>
+		<title>Magdalena Klasik - psycholog, psychoterapeuta w Katowicach</title>
         <meta name="keywords" content="psychoterapeuta, psycholog, psychoterapeuta katowice, psycholog katowice, psychoterapeuta w katowicach, psycholog w katowicach, Magdalena Klasik" />
   		<meta name="description" content="Psychoterapeuta Katowice Magdalena Klasik -Jestem psychologiem klinicznym, z I stopniem specjalizacji, certyfikowanym psychoterapeutą SNP PTP." />
 		<meta charset="utf-8" />
@@ -25,7 +25,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="/">Magdalena Klasik - Psychoterapeuta w Katowicach</a></h1>
+						<h1><a href="/">mgr Magdalena Klasik</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -54,7 +54,7 @@
 								<a href="#" class="image"><img src="images/portret.jpg" alt="Psychoterapeuta Katowice Magdalena Klasik" /></a>
 							</div>
 							<h2>mgr Magdalena Klasik</h2>
-							<p>psycholog, psychoterapeuta - Katowice</p>
+							<p>psycholog, psychoterapeuta</p>
 						</div>
 					</section>
 
