update phone number

--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
 									40-­043 Katowice <br />
 									ul. Jordana 6/10 <br />
 								</li>
-								<li class="fa-phone">+48 501 401 576</li>
+								<li class="fa-phone">
+									<a href="tel:+48501401576">+48 501 401 576</a>
+								</li>
 								<li class="fa-envelope">
 									<script type="text/javascript">
 										emailE='gmail.com'
