--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 							<ul class="contact">
 								<li class="fa-home">
 									PRACOWNIA PSYCHOTERAPII <br />
-									40-­043 Katowice <br />
-									ul. Jordana 6/10 <br />
+									40-­551 Katowice <br />
+									ul. Nasypowa 11/20 <br />
 								</li>
 								<li class="fa-phone">
 									<a href="tel:+48501401576">+48 501 401 576</a>
